--- a/admin/package.json
+++ b/admin/package.json
@@ -50,6 +50,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
     "recharts": "^2.15.3",
+    "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.16",
     "tailwind-merge": "^3.1.0",
     "tailwindcss": "^4.0.14",
