--- a/frontend1/package.json
+++ b/frontend1/package.json
@@ -13,7 +13,8 @@
     "@radix-ui/react-select": "^2.2.5",
     "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
-    "@tanstack/react-query": "^5.83.0",
+    "@tanstack/react-query": "^5.84.2",
+    "@tanstack/react-query-devtools": "^5.84.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -30,6 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-paystack": "^6.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.28.0",
     "react-swipeable": "^7.0.2",
