--- a/frontend1/package.json
+++ b/frontend1/package.json
@@ -31,6 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-intersection-observer": "^9.16.0",
     "react-paystack": "^6.0.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.28.0",
